--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <h1>Owen Baker</h1>
+    <div class="infoText">
     <h6>24 Walnut Avenue</h6>
     <h6>Massena, New York 13662</h6>
     <h6>(315) 740-8810</h6>
     <h6>orb208@gmail.com</h6>
+    </div>
     <div class="head">i</div>
     <div class="container">
         <div class="row">
