--- a/index.html
+++ b/index.html
@@ -6,28 +6,47 @@
     <title>Resume</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gafata&family=Markazi+Text:wght@400..700&family=Special+Gothic+Expanded+One&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
-    <h1>Owen Baker</h1>
+    <div class="img"></div>
     <div class="infoText">
-    <h6>24 Walnut Avenue</h6>
-    <h6>Massena, New York 13662</h6>
-    <h6>(315) 740-8810</h6>
-    <h6>orb208@gmail.com</h6>
+    <h1 class="markazi">Owen Baker</h1>
+    <h6 class="markazi">24 Walnut Avenue</h6>
+    <h6 class="markazi">Massena, New York 13662</h6>
+    <h6 class="markazi">(315) 740-8810</h6>
+    <h6 class="markazi">orb208@gmail.com</h6>
     </div>
-    <div class="head">i</div>
-    <div class="container">
+    <div class="head"></div>
+      <div class="container">
         <div class="row">
           <div class="col-sm">
-            One of three columns
+            <h2 class="special-gothic-expanded-one-regular skillsTrigger">Skills</h2>
+            <h5 id="skillsText" class="gafata-regular">Sample text</h5>
           </div>
           <div class="col-sm">
-            One of three columns
-          </div>
-          <div class="col-sm">
-            One of three columns
+            <h2 class="special-gothic-expanded-one-regular experienceTrigger">Experience</h2>
+            <h5 id="experienceText" class="gafata-regular">Sample text</h5>
           </div>
         </div>
       </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            <h2 class="special-gothic-expanded-one-regular educationTrigger">Education</h2>
+            <h5 id="educationText" class="gafata-regular">Sample text</h5>
+          </div>
+          <div class="col-sm">
+            <h2 class="special-gothic-expanded-one-regular referencesTrigger">References</h2>
+            <h5 id="referencesText" class="gafata-regular">Sample text</h5>
+          </div>
+        </div>
+      </div>
+
+      <script src="scripts.js"></script>
 </body>
 </html>
