sir jonathan the dinosaur baby

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
-    <div class="img"></div>
+  
     <div class="infoText">
     <h1 class="markazi">Owen Baker</h1>
     <h6 class="markazi">24 Walnut Avenue</h6>
@@ -21,7 +21,9 @@
     <h6 class="markazi">(315) 740-8810</h6>
     <h6 class="markazi">orb208@gmail.com</h6>
     </div>
-    <div class="head"></div>
+    <div class="horizontalDividerDark"></div>
+    <div class="horizontalDivider"></div>
+    <div class="horizontalDividerDark"></div>
       <div class="container">
         <div class="row">
           <div class="col-sm">
@@ -34,6 +36,7 @@
           </div>
         </div>
       </div>
+      <div class="divider"></div>
       <div class="container">
         <div class="row">
           <div class="col-sm">
