--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,21 +14,33 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
-  
-    <div class="infoText">
-    <h1 class="markazi">Owen Baker</h1>
-    <h6 class="markazi">24 Walnut Avenue</h6>
-    <h6 class="markazi">Massena, New York 13662</h6>
-    <h6 class="markazi">(315) 740-8810</h6>
-    <h6 class="markazi">orb208@gmail.com</h6>
+    <div class="col-sm">
+      <div>
+        <img class="me" src="images/moi.jpeg">
+      </div>
     </div>
-    <div class="horizontalDividerDark"></div>
-    <div class="horizontalDivider"></div>
-    <div class="horizontalDividerDark"></div>
+    <div class="textContainer">
+      <div class="col-sm">
+        <div class="infoText">
+        <h1 class="markazi">Owen Baker</h1>
+        <h6 class="markazi">24 Walnut Avenue</h6>
+        <h6 class="markazi">Massena, New York 13662</h6>
+        <h6 class="markazi">(315) 740-8810</h6>
+        <h6 class="markazi">orb208@gmail.com</h6>
+      </div>
+    </div>
+   
+    </div>
+    <div class="divider">
+      <div class="horizontalDividerDark top"></div>
+      <div class="horizontalDivider"></div>
+      <div class="horizontalDividerDark bottom"></div>
+    </div>
       <div class="container">
         <div class="row">
           <div class="col-sm">
             <h2 class="special-gothic-expanded-one-regular skillsTrigger">Skills</h2>
+            
             <h5 id="skillsText" class="gafata-regular">Sample text</h5>
           </div>
           <div class="col-sm">
@@ -36,7 +49,7 @@
           </div>
         </div>
       </div>
-      <div class="divider"></div>
+      
       <div class="container">
         <div class="row">
           <div class="col-sm">
