--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <div class="textContainer">
       <div class="col-sm">
         <div class="infoText">
-        <h1 class="markazi">Owen Baker</h1>
-        <h6 class="markazi">24 Walnut Avenue</h6>
-        <h6 class="markazi">Massena, New York 13662</h6>
-        <h6 class="markazi">(315) 740-8810</h6>
-        <h6 class="markazi">orb208@gmail.com</h6>
+          <h6 class="dynamicGreeting markazi"></h3>
+          <h1 class="markazi">Owen Baker</h1>
+          <h6 class="markazi">24 Walnut Avenue</h6>
+          <h6 class="markazi">Massena, New York 13662</h6>
+          <h6 class="markazi">(315) 740-8810</h6>
+          <h6 class="markazi">orb208@gmail.com</h6>
+        </div>
       </div>
-    </div>
-   
     </div>
     <div class="divider">
       <div class="horizontalDividerDark top"></div>
@@ -41,11 +41,28 @@
           <div class="col-sm">
             <h2 class="special-gothic-expanded-one-regular skillsTrigger">Skills</h2>
             
-            <h5 id="skillsText" class="gafata-regular">Sample text</h5>
+            <h5 id="skillsText" class="gafata-regular">
+              -Communication<br>
+              -General computer skills, including basics of<br> HTML/CSS and JavaScript<br>
+              -Teamwork skills
+            </h5>
           </div>
           <div class="col-sm">
             <h2 class="special-gothic-expanded-one-regular experienceTrigger">Experience</h2>
-            <h5 id="experienceText" class="gafata-regular">Sample text</h5>
+            <h5 id="experienceText" class="gafata-regular">
+              DuBray Rentals LLC, Massena, New York - Worker<br>
+              (August 2019 - Present day)<br>
+                -General construction work<br>
+              <br>
+              Regency Apartments, Massena, New York - Landscaper<br>
+              (June 2024 - August 2024)<br>
+                -Outdoor property management<br>
+              <br>
+              McDonald's, Massena, New York - Kitchen Crew Member<br>
+              (November 2024 - Present day)<br>
+                -Cooking various meats on both grill and fryer<br>
+                -Other duties as assigned<br>
+            </h5>
           </div>
         </div>
       </div>
@@ -54,11 +71,26 @@
         <div class="row">
           <div class="col-sm">
             <h2 class="special-gothic-expanded-one-regular educationTrigger">Education</h2>
-            <h5 id="educationText" class="gafata-regular">Sample text</h5>
+            <h5 id="educationText" class="gafata-regular">
+              Massena Central High School, Massena, New York<br>
+              (September 2022 - Present day)<br>
+                -Current grade level: 11th<br>
+                -Enrolled in St Lawrence-Lewis BOCES Seaway<br> Tech: Computer and Information Science<br>
+                -Anticipated graduation: June 2026
+            </h5>
           </div>
           <div class="col-sm">
             <h2 class="special-gothic-expanded-one-regular referencesTrigger">References</h2>
-            <h5 id="referencesText" class="gafata-regular">Sample text</h5>
+            <h5 id="referencesText" class="gafata-regular">
+              -Terry Dubray Sr.<br>
+              466 North Raquette River Rd, <br>Massena, NY, 13662<br>
+              (315) 250-2223<br>
+              <br>
+              -Forrest Kimball<br>
+              4 Sharon St, Unit 2, <br>Massena, NY, 13662<br>
+              (315) 705-3304
+              <br>
+            </h5>
           </div>
         </div>
       </div>
